--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
     - name: Build
-      run: make >
+      run: make
     - name: Upload
       uses: actions/upload-artifact@v4
       with:
