changed default theme settings

--- a/theme.conf
+++ b/theme.conf
@@ -5,7 +5,7 @@ STRING   = #5fff5f
 CHAR     =#ff9bf7
 NUMBER   = #f7ce5e
 COMMENT  = #87af87
-BRACKET  = #ffff5f
+BRACKET  = #8dffa0
 NORMAL   = #ffffff
 SELECTION= #ffffff
 STATUS   =#000000
